Edit 2 of HTML and CSS commenting

--- a/Module 1 Challenge/michaelPonteModuleOneChallenge/Develop/index.html
+++ b/Module 1 Challenge/michaelPonteModuleOneChallenge/Develop/index.html
@@ -52,8 +52,9 @@
             </p>
         </div>
     </div>
-    <!-- Three points of right of page -->
+    <!-- Big block on right of page -->
     <div class="benefits">
+        <!-- Three elements within block -->
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
