Fixed folder locations

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -25,7 +25,7 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </div class="header">
     <!-- Main big image -->
     <div class="hero" alt="Four people in a conference room"></div>
     <!-- Three points on left of page -->
