fixed header portion

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -8,10 +8,10 @@
 </head>
 
 <body>
-    <div class="header">
+    <header>
         <!-- Main title -->
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <nav>
             <!-- Navigation buttons -->
             <ul>
                 <li>
@@ -24,8 +24,8 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
-    </div class="header">
+        </nav>
+    </header>
     <!-- Main big image -->
     <div class="hero" alt="Four people in a conference room"></div>
     <!-- Three points on left of page -->
