--- a/Develop/index.html
+++ b/Develop/index.html
@@ -29,29 +29,29 @@
     <!-- Main big image -->
     <div class="hero" alt="Four people in a conference room"></div>
     <!-- Three points on left of page -->
-    <div class="content">
-        <div class="search-engine-optimization">
+    <main>
+        <section class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Search engine optimization; backlink, content headings, mobile compatibility, social media, and link building" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
+        </section>
+        <section id="online-reputation-management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" alt="Laptop displaying increasing reputation on graphs" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
+        </section>
+        <section id="social-media-marketing" class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" alt="Various social media icons" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
-    </div>
+        </section>
+    </main>
     <!-- Big block on right of page -->
     <div class="benefits">
         <!-- Three elements within block -->
