--- a/Develop/index.html
+++ b/Develop/index.html
@@ -53,7 +53,7 @@
         </section>
     </main>
     <!-- Big block on right of page -->
-    <div class="benefits">
+    <aside class="benefits">
         <!-- Three elements within block -->
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -76,7 +76,7 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </div>
+    </aside>
     <!-- Page footer -->
     <div class="footer">
         <h4>Made with ❤️️ by Horiseon</h4>
