--- a/Develop/index.html
+++ b/Develop/index.html
@@ -78,12 +78,12 @@
         </div>
     </aside>
     <!-- Page footer -->
-    <div class="footer">
+    <footer>
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
