--- a/Develop/index.html
+++ b/Develop/index.html
@@ -30,21 +30,21 @@
     <div class="hero" alt="Four people in a conference room"></div>
     <!-- Three points on left of page -->
     <main>
-        <section class="search-engine-optimization">
+        <section id="search-engine-optimization" class="utilities">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Search engine optimization; backlink, content headings, mobile compatibility, social media, and link building" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
-        <section id="online-reputation-management" class="online-reputation-management">
+        <section id="online-reputation-management" class="utilities">
             <img src="./assets/images/online-reputation-management.jpg" alt="Laptop displaying increasing reputation on graphs" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
-        <section id="social-media-marketing" class="social-media-marketing">
+        <section id="social-media-marketing" class="utilities">
             <img src="./assets/images/social-media-marketing.jpg" alt="Various social media icons" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
